<resources>
    <string name="app_name">Project01-Spotify</string>
    <string name="millions_of_songs_nfree_on_spotify">Millions of songs.\nFree on Spotify.</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="spotify">Spotify</string>
    <string name="musics_for_everyone">Musics for everyone</string>
    <string name="log_in_to_spotify">Log in to Spotify</string>
    <string name="sign_up_title">Create Account</string> <!-- Or "Log in to Spotify" if this is a login screen -->
    <string name="logo_image_description">App Logo</string>
    <string name="email_or_username_label">Email or username</string>
    <string name="email_hint_example">jenny123@example.com</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="example_email">example123@gmail.com</string>
    <string name="sign_up_value">Email or phone number</string>
    <string name="sign_in_label">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="spotifyicon">SpotifyIcon</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up_link_underlined"><![CDATA[<U>Sign up</U>]]></string>
    <string name="sign_in_link_underlined"><![CDATA[<U>Sign in</U>]]></string>
</resources>