<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/spotifyIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/spotify" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:gravity="center"
            android:text="@string/millions_of_songs_nfree_on_spotify"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:text="@string/sign_up_free"
            android:textColor="@color/black"
            app:backgroundTint="#1ED760"
            app:cornerRadius="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleLog"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:gravity="center"
            android:text="@string/continue_with_google"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:cornerRadius="40dp"
            app:icon="@drawable/google"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@null"
            app:strokeColor="@color/white"
            app:strokeWidth="0.9dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookLog"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:gravity="center"
            android:text="@string/continue_with_facebook"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:cornerRadius="40dp"
            app:icon="@drawable/communication"
            app:iconGravity="start"
            app:iconPadding="12dp"
            app:iconTint="@null"
            app:strokeColor="@color/white"
            app:strokeWidth="0.9dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/appleLog"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:gravity="center"
            android:text="@string/continue_with_apple"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:cornerRadius="40dp"
            app:icon="@drawable/apple"
            app:iconGravity="start"
            app:iconPadding="5dp"
            app:strokeColor="@color/white"
            app:strokeWidth="0.9dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:text="@string/sign_in_label"
            android:textColor="@color/white"
            app:cornerRadius="40dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>