<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_max="488dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/spotify_icon_svg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:fontFamily="@font/be_vietnam_pro_semibold"/>

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_value"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:inputType="textEmailAddress|phone"
            android:autofillHints="emailAddress"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_label"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/re_passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/signUpClickAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:backgroundTint="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_light"
            android:text="@string/already_have_account"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/signInAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_pro_light"
            android:text="@string/sign_in_label"
            android:textColor="@color/white"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="40dp"
            android:paddingTop="3dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>